--- a/main.css
+++ b/main.css
@@ -3,12 +3,12 @@
     padding: 0;
 }
 
+.content {
+    font-size: 0;
+}
+
 .contentHead {
     height: 4.39rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 998;
 }
 
 .transparentBtn {
@@ -20,17 +20,16 @@
 .downloadBtnHead {
     width: 6rem;
     height: 2rem;
-    position: fixed;
+    position: absolute;
     top: 1.22rem;
     right: 1.5rem;
-    z-index: 999;
 }
 
 .downloadBtn {
     width: 12rem;
     height: 3.6rem;
     position: absolute;
-    top: 29.6rem;
+    top: 33.99rem;
     left: 50%;
     margin-left: -6rem;
 }
@@ -39,24 +38,24 @@
     width: 7.6rem;
     height: 2.4rem;
     position: absolute;
-    top: 47.5rem;
+    top: 51.89rem;
     left: 50%;
     margin-left: -3.9rem;
 }
 
 .leftBtn {
-    width: 1.5rem;
+    width: 2rem;
     height: 3rem;
     position: absolute;
-    top: 63.2rem;
+    top: 67.6rem;
     left: 0;
 }
 
 .rightBtn {
-    width: 1.5rem;
+    width: 2rem;
     height: 3rem;
     position: absolute;
-    top: 63.2rem;
+    top: 67.6rem;
     right: 0;
 }
 
@@ -64,7 +63,7 @@
     width: 18rem;
     height: 10rem;
     position: absolute;
-    top: 60rem;
+    top: 64.39rem;
     left: 50%;
     margin-left: -9rem;
 }
